--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
     <div id="root"></div>
     <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
+    <div id="mendable-component"></div>
+    <script src="https://unpkg.com/@mendable/search@0.0.205/dist/umd/mendable-bundle.min.js"></script>
+    <script>
+    Mendable.initialize({
+      anon_key: 'YOUR_ANON_KEY',
+      type:"searchBar",
+      elementId: "mendable-component" // required
+      // all the other props for the component type
+    });
+    </script>
   </body>
 </html>
