--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/@mendable/search@0.0.205/dist/umd/mendable-bundle.min.js"></script>
     <script>
     Mendable.initialize({
-      anon_key: 'YOUR_ANON_KEY',
+      anon_key: 'd42bf682-94c1-4160-b490-4508581c96a1',
       type:"searchBar",
       elementId: "mendable-component" // required
       // all the other props for the component type
